<resources>
    <!--    Default words-->

    <string name="word1">LONXANO</string>
    <string name="word2">ALIMENTO</string>
    <string name="word3">SEDE</string>
    <string name="word4">ACHEGAR</string>
    <string name="word5">SINAL</string>
    <string name="word6">SANCIÓN</string>
    <string name="word7">ETAPA</string>
    <string name="word8">TERZO</string>
    <string name="word9">CÓBADO</string>
    <string name="word10">RESUMO</string>
    <string name="word11">PAU</string>
    <string name="word12">PROTESTA</string>
    <string name="word13">VERÁN</string>
    <string name="word14">DOTAR</string>
    <string name="word15">FRENO</string>
    <string name="word16">RONQUIDO</string>
    <string name="word17">BUSCA</string>
    <string name="word18">ANINOVO</string>
    <string name="word19">FOCHANCA</string>
    <string name="word20">AÑO</string>
    <string name="word21">BOTAR</string>
    <string name="word22">MAIS</string>
    <string name="word23">PODER</string>
    <string name="word24">DAR</string>
    <string name="word25">PRESA</string>
    <string name="word26">HIPOPÓTAMO</string>
    <string name="word27">PARABÉNS</string>
    <string name="word28">PÓLA</string>
    <string name="word29">FÓRA</string>
    <string name="word30">TEIXUGO</string>
    <string name="word31">VAGALUME</string>
    <string name="word32">ORFO</string>
    <string name="word33">ADOITAR</string>
    <string name="word34">ORELLA</string>
    <string name="word35">TECLA</string>
    <string name="word36">CHAVE</string>


    <string name="app_name">ForcApp</string>
    <string name="singleplayer_bt">Un xogador</string>
    <string name="multiplayer_bt">Multixogador</string>
    <string name="dicionario">Dicionario</string>
    <string name="add_word">Engadir palabra</string>
    <string name="remove">Toca para eliminar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="add_dialog">Engadir nova palabra</string>
    <string name="KEY_TEXT_REMOVE">remove</string>
    <string name="remove_dialog">Seguro que desexa eliminar?</string>
    <string name="reset_dialog">Seguro que desexa resetear a BBDD?</string>
    <string name="dialog_acept">Aceptar</string>
    <string name="refresh_bd">Actualizar</string>
    <string name="reset">Restablecer valores por defecto</string>
    <string name="game_over">Perdiches...</string>
    <string name="game_winner">Parabéns, gañaches!</string>
    <string name="word_was">A palabra era:</string>
    <string name="exit">Saír</string>
    <string name="new_game">Nova partida</string>
    <string name="deleteall_dialog">Borrar tódalas palabras?</string>
    <string name="exit_dictionary_dialog">Non pode saír co dicionario baleiro.</string>
    <string name="cont">Continuar</string>
    <string name="add_hint">Soamente se permiten letras do abecedario.</string>
    <string name="join_lobby">UNIRSE A SALA</string>
    <string name="create_bt">CREAR SALA</string>
    <string name="join_bt">UNIRSE A SALA</string>
    <string name="enter_code_dialog">Introducir código da sala:</string>
    <string name="sign_in_bt">REXISTRARSE</string>
    <string name="log_in_bt">INICIAR SESIÓN</string>
    <string name="forget_password">Recuperar contrasinal</string>
    <string name="add_email">Correo electrónico</string>
    <string name="password">Contrasinal</string>
    <string name="auth">Autentificación</string>
    <string name="invaild_password">Ingresa un contrasinal con máis de 6 caracteres.</string>
    <string name="invalid_email">Email non válido.</string>
    <string name="sign_out">Pechar sesión</string>
    <string name="ERROR_INVALID_CUSTOM_TOKEN">O formato do token personalizado é incorrecto. Por favor revise a documentación.</string>
    <string name="ERROR_CUSTOM_TOKEN_MISMATCH">O token personalizado corresponde a unha audiencia diferente.</string>
    <string name="ERROR_INVALID_CREDENTIAL">A credencial de autenticación proporcionada ten un formato incorrecto ou caducado.</string>
    <string name="ERROR_INVALID_EMAIL">A direción do correo electrónico está mal formateada.</string>
    <string name="ERROR_WRONG_PASSWORD">O contrasinal non é válido ou o usuario non ten contrasinal.</string>
    <string name="contrasinalIncorrecto">O contrasinal é incorrecto</string>
    <string name="ERROR_USER_MISMATCH">As credenciais proporcionadas non corresponden ao usuario que iniciou sesión anteriormente.</string>
    <string name="ERROR_REQUIRES_RECENT_LOGIN">Esta operación é sensible e require de autenticación recente. Inicie de sesión novamente antes de volver a intentar esta solicitud.</string>
    <string name="ERROR_ACCOUNT_EXISTS_WITH_DIFFERENT_CREDENTIAL">Xa existe unha conta coa mesma dirección de correo electrónico, pero diferentes credenciais de inicio de sesión. Inicie sesión con un proveedor asociado a esta dirección de correo electrónico.</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">A dirección do correo electrónico xa está sendo utilizada por outra conta.</string>
    <string name="ERROR_CREDENTIAL_ALREADY_IN_USE">A credencial xa está asociada con unha conta de usuario diferente.</string>
    <string name="ERROR_USER_DISABLED">A conta de usuario foi inhabilitada por un administrador.</string>
    <string name="ERROR_USER_TOKEN_EXPIRED">A credencial do usuario xa non é válida. O usuario debe iniciar sesión novamente.</string>
    <string name="ERROR_USER_NOT_FOUND">Non hai ningún rexistro de usuario que corresponda a este identificador. É posíbel que o usuario fora eliminado.</string>
    <string name="ERROR_INVALID_USER_TOKEN">A credencial do usuario xa non é válida. O usuario debe iniciar sesión novamente.</string>
    <string name="ERROR_OPERATION_NOT_ALLOWED">Esta operación non está permitida. Debes habilitar o servizo na consola.</string>
    <string name="ERROR_WEAK_PASSWORD">O contrasinal non é valido.</string>
    <string name="ERROR_MIN_6CHARS">O contrasinal non é valido, debe ter polo menos 6 caracteres.</string>
    <string name="player_1">Xogador 1:</string>
    <string name="listo">Listo</string>
    <string name="xogadores_listos">Xogadores listos:</string>
    <string name="player_2">Xogador 2:</string>
    <string name="email">email</string>
    <string name="id_partida">ID PARTIDA</string>
    <string name="database_link">https://forcapp-bc7d8-default-rtdb.europe-west1.firebasedatabase.app/</string>
    <string name="compartir">compartir</string>
</resources>